# gpt-reverse-proxy

./: .env  .gitignore  Dockerfile  Procfile  README.md  boot.ts  litellm_config.yaml.example  package.json  parse_log.ts  pnpm-lock.yaml  pyproject.toml  server.ts  tsconfig.json  vitest.config.ts
app/: auth.py  config.py  logging.py  main.py  openai2claudecode_llm.py  parse_log.py  streaming_converter.py  utils.py
app/models/: claudecode_client.py  claudecode_streaming.py  openai_client.py
app/routers/: litellm.py  ollama.py
debug-ui/: .gitignore  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
debug-ui/src/: App.vue
endpoints/: base.ts  claude.ts  debug.ts  index.ts  ollama.ts  openai.ts  types.ts
hooks/: cursor-compatible.ts
lib/: BaseHook.ts  Breaker.ts  DumpEventSourceStream.ts  DumpStream.ts  Dumper.ts  EndpointEnv.ts  EventSourceEncoderStream.ts  Hook.ts  HookRegistry.ts  HookRunner.ts  LoadBalancer.ts  Upstream.ts  UpstreamRegistry.ts  auth.ts  dumper.ts  errors.ts  hono-logger.ts  hono-proxy.ts  hookRegistry.ts  logger.ts  proxy.ts  route-ollama.ts  route-openai.ts  utils.ts
lib/utils/: index.ts  (+1 more)
patches/: cursor-compatible.CursorCompatibleHook.spec.ts  cursor-compatible.FinishReasonCleanerStream.spec.ts  cursor-compatible.ts  json-patch-request.ts  reasoning-to-think.ts  simulate-claude-code-client.ts
protocols/: claude.ts  completion-openai-to-claude.ts  index.ts  models-openai-to-ollama.ts  openai.ts
proxy/: logger.ts  proxy.ts
transformers/: ollama-to-openai.ts  openai-to-claude.ts
typings/: hono.d.ts
(+33 files in other folders)
